// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator component renders correctly 1`] = `
<div>
  <div
    className="navContainer"
  >
    <div>
      <h1>
        Math Magicians
      </h1>
    </div>
    <div>
      <ul
        className="nav"
      >
        <li>
          Home
        </li>
        <li>
          Calculator
        </li>
        <li>
          Quote
        </li>
      </ul>
    </div>
  </div>
  <h2
    id="calculator-cta"
  >
    Let's do some Math:
  </h2>
  <div
    className="container"
  >
    <div
      className="item screen"
    >
      <p>
        0
      </p>
    </div>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      AC
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      +/-
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      %
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      ÷
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      x
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      -
    </button>
    <button
      className="item zero"
      onClick={[Function]}
      type="button"
    >
      0
    </button>
    <button
      className="item dot"
      onClick={[Function]}
      type="button"
    >
      .
    </button>
    <button
      className="item equals orange"
      onClick={[Function]}
      type="button"
    >
      =
    </button>
  </div>
</div>
`;

exports[`Home component renders correctly 1`] = `
<div>
  <div
    className="navContainer"
  >
    <div>
      <h1>
        Math Magicians
      </h1>
    </div>
    <div>
      <ul
        className="nav"
      >
        <li>
          Home
        </li>
        <li>
          Calculator
        </li>
        <li>
          Quote
        </li>
      </ul>
    </div>
  </div>
  <div
    className="home-container"
  >
    <h1>
      Welcome to our page!
    </h1>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam recusandae alias error harum maxime adipisci amet laborum. Perspiciatis minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur fugiat, temporibus enim commodi iusto libero magni deleniti quod quam consequuntur! Commodi minima excepturi repudiandae velit hic maxime
    </p>
  </div>
</div>
`;

exports[`Quote component renders correctly 1`] = `
<div>
  <div
    className="navContainer"
  >
    <div>
      <h1>
        Math Magicians
      </h1>
    </div>
    <div>
      <ul
        className="nav"
      >
        <li>
          Home
        </li>
        <li>
          Calculator
        </li>
        <li>
          Quote
        </li>
      </ul>
    </div>
  </div>
  <div
    className="home-container"
  >
    <h1>
      Welcome to our page!
    </h1>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam recusandae alias error harum maxime adipisci amet laborum. Perspiciatis minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur fugiat, temporibus enim commodi iusto libero magni deleniti quod quam consequuntur! Commodi minima excepturi repudiandae velit hic maxime
    </p>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <div
    className="navContainer"
  >
    <div>
      <h1>
        Math Magicians
      </h1>
    </div>
    <div>
      <ul
        className="nav"
      >
        <li>
          Home
        </li>
        <li>
          Calculator
        </li>
        <li>
          Quote
        </li>
      </ul>
    </div>
  </div>
  <h2
    id="calculator-cta"
  >
    Let's do some Math:
  </h2>
  <div
    className="container"
  >
    <div
      className="item screen"
    >
      <p>
        0
      </p>
    </div>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      AC
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      +/-
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      %
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      ÷
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      x
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="item"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="item orange"
      onClick={[Function]}
      type="button"
    >
      -
    </button>
    <button
      className="item zero"
      onClick={[Function]}
      type="button"
    >
      0
    </button>
    <button
      className="item dot"
      onClick={[Function]}
      type="button"
    >
      .
    </button>
    <button
      className="item equals orange"
      onClick={[Function]}
      type="button"
    >
      =
    </button>
  </div>
</div>
`;
